Virtual-threads review: preserve interrupts in clearNamespace, document the threading model
scanAndUnlink was the one blocking path outside await() and its broad
catch(Exception) swallowed InterruptedException without re-asserting the
flag, so a structured-concurrency cancellation or servlet abort landing
mid-clear was silently lost. Restore the flag and report failure, matching
await()'s documented contract; covered by a test that calls clearNamespace
with the flag already set.

Also add the Threading model section of CLAUDE.md that the private repo's
docker notes already reference, and correct the stack line: the AWS SDK
clients are deliberately sync-on-virtual-threads since the migration, not
async.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GD2DRqocjavqTHfo7gL9Gx